munch: Add DT2W service
Change-Id: Ia503b95831e138bb4f8aec5762b9f637f6d2451b

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -32,3 +32,9 @@ on property:persist.bluetooth.a2dp_offload.disabled=*
 
 on property:ro.bluetooth.a2dp_offload.supported=*
     setprop ro.bluetooth.a2dp_offload.supported false
+
+on property:dev.bootcomplete=1
+    chmod 0666 /dev/xiaomi-touch
+
+on property:dev.bootcomplete=1 && property:persist.sys.munch.dt2w=*
+    exec /system/bin/xiaomi-touch 14 ${persist.sys.munch.dt2w}
