munch: build qti vibrator hal
* Also override the stock vibrator hal

Signed-off-by: zoldycc <sanjheevisv@palladiumos.com>

--- a/rootdir/etc/init.munch.rc
+++ b/rootdir/etc/init.munch.rc
@@ -12,3 +12,10 @@ service vendor.power-qti /vendor/bin/hw/android.hardware.power-service
     group system
     disabled
     override
+
+service vibratorfeature-hal-service /vendor/bin/hw/vendor.xiaomi.hardware.vibratorfeature.service
+    class hal
+    user system
+    group system input
+    disabled
+    override
