--- a/vibrator/vendor.qti.hardware.vibrator.service.munch.rc
+++ b/vibrator/vendor.qti.hardware.vibrator.service.munch.rc
@@ -1,4 +1,4 @@
-service vendor.qti.vibrator /vendor/bin/hw/vendor.qti.hardware.vibrator.service.munch
+service vibratorfeature-hal-service-munch /system/bin/hw/vendor.qti.hardware.vibrator.service.munch
     class hal
     user system
     group system input
