--- a/rro_overlays/TelephonyOverlay/AndroidManifest.xml
+++ b/rro_overlays/TelephonyOverlay/AndroidManifest.xml
@@ -11,7 +11,7 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lineage.telephonyoverlay"
+    package="org.palladium.telephonyoverlay"
     android:versionCode="1"
     android:versionName="1.0">
     <application android:hasCode="false" />
