--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -23,3 +23,12 @@ on boot
     chown system system /sys/class/leds/vibrator/duration
     chown system system /sys/class/leds/vibrator/state
     chown system system /sys/class/timed_output/vibrator/enable
+
+on property:persist.bluetooth.bluetooth_audio_hal.disabled=*
+    setprop persist.bluetooth.bluetooth_audio_hal.disabled false
+
+on property:persist.bluetooth.a2dp_offload.disabled=*
+    setprop persist.bluetooth.a2dp_offload.disabled true
+
+on property:ro.bluetooth.a2dp_offload.supported=*
+    setprop ro.bluetooth.a2dp_offload.supported false
